# openshoedesigner

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
data/: Presets.json
src/: CMakeLists.txt  Config.h  StdInclude.h  fixIconXpm.sh  languages.h  main.cpp  main.h  openshoedesigner.dox
src/3D/: 3D.dox  AffineTransformMatrix.cpp  AffineTransformMatrix.h  BackgroundImage.cpp  BackgroundImage.h  Bender.h  Bezier3.cpp  Bezier3.h  BooleanBox.cpp  BooleanBox.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Ellipse.cpp  Ellipse.h  FileDXF.cpp  FileDXF.h  FileGTS.cpp  FileGTS.h  FileGeometry.cpp  FileGeometry.h  FileOBJ.cpp  FileOBJ.h  FilePLY.cpp  FilePLY.h  FileSTL.cpp  FileSTL.h  Geometry.cpp  Geometry.h  GeometrySplitter.cpp  GeometrySplitter.h  HeightField.cpp  HeightField.h  NURBS.cpp  NURBS.h  NagataPatch.cpp  NagataPatch.h  OpenGL.h  OpenGLCanvas.cpp  OpenGLCanvas.h  (+46 more)
src/3D/glad/: gl.c  gl.h  glad.c  glad.h
src/gui/: CMakeLists.txt  Canvas3D.cpp  Canvas3D.h  CanvasAnisotropy.cpp  CanvasAnisotropy.h  CanvasFlattening.cpp  CanvasFlattening.h  CanvasFootModel.cpp  CanvasFootModel.h  CanvasGraph.cpp  CanvasGraph.h  CanvasInsole.cpp  CanvasInsole.h  CanvasMeasurementGrid.cpp  CanvasMeasurementGrid.h  CanvasPattern.cpp  CanvasPattern.h  CanvasStereoTest.cpp  CanvasStereoTest.h  CanvasSupport.cpp  CanvasSupport.h  CanvasTestStitch.cpp  CanvasTestStitch.h  CanvasWalkcycle.cpp  CanvasWalkcycle.h  CollectionFilepaths.cpp  CollectionFilepaths.h  CollectionUnits.cpp  CollectionUnits.h  DialogEditorAnisotropy.cpp  DialogEditorAnisotropy.h  DialogEditorFootModel.cpp  DialogEditorFootModel.h  DialogFormulaEditor.cpp  DialogFormulaEditor.h  DialogQuickInitFoot.cpp  DialogQuickInitFoot.h  DialogSetupMidi.cpp  DialogSetupMidi.h  DialogSetupPaths.cpp  (+40 more)
src/gui/icons/: LegMeasurements.xpm  Logo.xpm
src/math/: BendLine.cpp  BendLine.h  CMakeLists.txt  Dependencies.cpp  Dependencies.h  DependentVector.cpp  DependentVector.h  Ellipse.cpp  Ellipse.h  EnergyRelease.cpp  EnergyRelease.h  Exporter.cpp  Exporter.h  FormFinder.cpp  FormFinder.h  FourierTransform.cpp  FourierTransform.h  Kernel.h  KernelDensityEstimator.cpp  KernelDensityEstimator.h  LinearOptimizer.cpp  LinearOptimizer.h  MEstimator.cpp  MEstimator.h  MathParser.cpp  MathParser.h  MatlabFile.cpp  MatlabFile.h  Matrix.cpp  Matrix.h  Matrix_test.cpp  Measurement.h  NelderMeadOptimizer.cpp  NelderMeadOptimizer.h  OptimizerAbstract.cpp  OptimizerAbstract.h  PCA.cpp  PCA.h  ParameterLimits.cpp  ParameterLimits.h  (+14 more)
src/project/: Builder.cpp  Builder.h  CMakeLists.txt  Configuration.cpp  Configuration.h  CoordinateSystem.cpp  CoordinateSystem.h  Design.cpp  Design.h  FootMeasurements.cpp  FootMeasurements.h  Insole.cpp  Insole.h  Parameter.cpp  Parameter.h  ParameterEnum.cpp  ParameterEnum.h  ParameterEvaluator.cpp  ParameterEvaluator.h  ParameterFormula.cpp  ParameterFormula.h  ParameterString.cpp  ParameterString.h  ParameterValue.cpp  ParameterValue.h  Project.cpp  Project.h  ProjectView.cpp  ProjectView.h  WorkerThread.cpp  WorkerThread.h  project.dox
src/project/command/: CommandConfigSetEnum.cpp  CommandConfigSetEnum.h  CommandConfigSetParameter.cpp  CommandConfigSetParameter.h  CommandConfigSetString.cpp  CommandConfigSetString.h  CommandFootMeasurementSet.cpp  CommandFootMeasurementSet.h  CommandFootMeasurementsCopy.cpp  CommandFootMeasurementsCopy.h  CommandFootModelSetParameter.cpp  CommandFootModelSetParameter.h  CommandProjectSetLegLengthDifference.cpp  CommandProjectSetLegLengthDifference.h  CommandProjectSetParameter.cpp  CommandProjectSetParameter.h  CommandShoePreset.cpp  CommandShoePreset.h  CommandShoeSetParameter.cpp  CommandShoeSetParameter.h  command.dox
src/project/design/: Design.cpp  Design.h
src/project/foot/: Bone.cpp  Bone.h  FootModel.cpp  FootModel.h  Skeleton.cpp  Skeleton.h
src/system/: CMakeLists.txt  IniFile.cpp  IniFile.h  JSON.cpp  JSON.h  MidiPort.cpp  MidiPort.h  MidiSignalMap.cpp  MidiSignalMap.h  SerialPort.cpp  SerialPort.h  StopWatch.cpp  StopWatch.h  UTF8.cpp  UTF8.h
(+84 files in other folders)
